# MechEngineExamples

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp
Engine/Source/3rd/: CMakeLists.txt
Engine/Source/3rd/json11/: CMakeLists.txt
Engine/Source/3rd/libigl/include/igl/: exact_geodesic.cpp  exact_geodesic.h  fast_find_intersections.cpp  (+4 more)
Engine/Source/3rd/tinyspline/: CMakeLists.txt
Engine/Source/3rd/tinyspline/src/: CMakeLists.txt
Engine/Source/BuildTool/BuildTool/: CMakeLists.txt  README.md
Engine/Source/BuildTool/BuildTool/meta_parser/: CMakeLists.txt
Engine/Source/BuildTool/BuildTool/precompile/: precompile.cmake  precompile.json.in
Engine/Source/BuildTool/Example/: CMakeLists.txt  main.cpp
Engine/Source/BuildTool/Example/Reflection/: ObjectInitiliazer.h  meta_example.cpp  meta_example.h
Engine/Source/Editor/: CMakeLists.txt  Editor.cpp  Editor.h
Engine/Source/Editor/Core/: EditorDefaultLayout.h  PrettifyName.h  reflection_register.cpp  reflection_register.h
Engine/Source/Editor/Widgets/: OsDialogs.h  PropertyEditor.cpp  PropertyEditor.h  TransformGizmo.cpp  TransformGizmo.h  WidgetUtils.cpp  WidgetUtils.h
Engine/Source/Editor/Widgets/MenuBarWidgets/: GroundWidget.h  MenuBar.cpp  MenuBar.h  MenuBarItem.h  SaveMeshMenuBar.h
Engine/Source/Editor/Widgets/WorldEditor/: ActorOutliner.h  ObjectPanel.h  ViewGizmo.h  WorldOutliner.cpp  WorldOutliner.h
Engine/Source/Runtime/: CMakeLists.txt
Engine/Source/Runtime/Actors/: CameraActor.cpp  CameraActor.h  CurveActor.cpp  CurveActor.h  ParametricMeshActor.h  PointLightActor.h
Engine/Source/Runtime/Animation/: FKController.cpp  FKController.h  FKSolver.cpp  FKSolver.h  IKController.h  IKJoint.cpp  IKJoint.h  IKSolver.cpp  IKSolver.h  JointComponent.cpp  JointComponent.h  JointParameter.cpp  JointParameter.h  Joints.cpp  Joints.h
Engine/Source/Runtime/Classes/Curve/: Curve.cpp  Curve.h
Engine/Source/Runtime/Classes/Materials/: Material.cpp  Material.h
Engine/Source/Runtime/Classes/Mechanisms/: ClosedChainIKSolver.cpp  ClosedChainIKSolver.h  SpatialJoints.cpp  SpatialJoints.h  SphericalLinkage.cpp  SphericalLinkage.h
Engine/Source/Runtime/Components/: ActorComponent.cpp  ActorComponent.h  BCParametricMeshComponent.cpp  BCParametricMeshComponent.h  CameraComponent.cpp  CameraComponent.h  ConstPointLightComponent.h  LightComponent.cpp  LightComponent.h  LinesComponent.cpp  LinesComponent.h  ParametricMeshComponent.h  ParametricSurfaceComponent.cpp  ParametricSurfaceComponent.h  PointLightComponent.h  RenderingComponent.h  SCAFParametricMeshComponent.cpp  SCAFParametricMeshComponent.h  SCParametricMeshComponent.cpp  SCParametricMeshComponent.h  StaticCurveComponent.cpp  StaticCurveComponent.h  StaticMeshComponent.cpp  StaticMeshComponent.h  TransformComponent.cpp  TransformComponent.h
Engine/Source/Runtime/Core/: ContainerTypes.h  CoreMinimal.h  Delegate.h  PointerTypes.h
Engine/Source/Runtime/Core/Algorithm/: CurveDistance.cpp  CurveDistance.h  GeometryProcess.cpp  GeometryProcess.h  GraphTheory.h  PlaneGeometry.cpp  PlaneGeometry.h  PoissonDiskSample.h  TernarySearch.h
Engine/Source/Runtime/Core/Containers/: FString.h
Engine/Source/Runtime/Core/Log/: Log.h  LogFormatter.h  Logger.cpp  Logger.h
Engine/Source/Runtime/Core/Math/: Box.h  FTransform.cpp  FTransform.h  Geometry.cpp  Geometry.h  Intersect.cpp  Intersect.h  Interval.h  LinearAlgebra.cpp  LinearAlgebra.h  Math.cpp  Math.h  MathType.h  Random.h
Engine/Source/Runtime/Core/Mesh/: BasicShapesLibrary.cpp  BasicShapesLibrary.h  MeshBoolean.cpp  MeshBoolean.h  StaticMesh.cpp  StaticMesh.h
Engine/Source/Runtime/Core/Misc/: Config.cpp  Config.h  Path.cpp  Path.h  Platform.h  ini.h
Engine/Source/Runtime/Core/Object/: CoreTypeTraits.h  Object.cpp  Object.h  ObjectInitiliazer.cpp  ObjectInitiliazer.h  ObjectPath.cpp  ObjectPath.h  ObjectPropertyTag.h  Package.cpp  Package.h
Engine/Source/Runtime/Core/Surface/: ParametricSurface.cpp  ParametricSurface.h
Engine/Source/Runtime/Game/: Actor.cpp  Actor.h  StaticMeshActor.cpp  StaticMeshActor.h  TimerManager.cpp  TimerManager.h  World.cpp  World.h
Engine/Source/Runtime/Render/: GPUSceneInterface.cpp  GPUSceneInterface.h  README.md  RendererInterface.h  ViewportInterface.cpp  ViewportInterface.h
Engine/Source/Runtime/Render/Core/: CommandBuffer.h  LuisaViewport.h  TypeConvertion.h  VertexData.h  ViewMode.h  bxdf_context.h  gbuffer.h  material_data.h  math_function.h  ray_tracing_hit.h  transform_data.h  view_data.h
Engine/Source/Runtime/Render/RayTracing/: RayTracingPipeline.cpp  RayTracingPipeline.h  RayTracingScene.cpp  RayTracingScene.h
Engine/Source/Runtime/Render/SceneProxy/: CameraSceneProxy.cpp  CameraSceneProxy.h  LightSceneProxy.cpp  LightSceneProxy.h  LineSceneProxy.cpp  LineSceneProxy.h  MaterialSceneProxy.cpp  MaterialSceneProxy.h  SceneProxy.cpp  SceneProxy.h  StaticMeshSceneProxy.cpp  StaticMeshSceneProxy.h  TransformProxy.cpp  TransformProxy.h
Engine/Source/Runtime/Render/light/: light_base.h  point_light.h
Engine/Source/Runtime/Render/material/: blinn_phong_material.h  disney_material.h  material_base.h  shading_function.h
Engine/Source/Runtime/UI/: ImguiPlus.cpp  ImguiPlus.h  LambdaUIWidget.h  UIWidget.h
Engine/Source/Runtime/UI/ImguiNotify/: ImGuiNotify.hpp
Engine/Source/Runtime/UI/ImguiToggle/: imgui_offset_rect.h  imgui_toggle_renderer.cpp
Engine/Source/Runtime/UI/Imguizmo/: Imguizmo.cpp  Imguizmo.h
Examples/: CMakeLists.txt
Examples/Content/: SphericalLinkageTrajectory.txt
Examples/Source/: BasicShapeTest.h  BasicShapesExample.h  BuiltinSurfaces.h  ConvexHullExample.h  CornellBox.h  CurveExample.h  CustomShaderExample.h  DebugDrawExample.h  ExtrudeMeshExample.h  ExtrusionCurve.h  GeometryDistanceExample.h  IntersectionExample.h  IntersectionTest.h  MeshBooleanTest.h  MeshNormalExample.h  MetaDataExample.h  OrientedSurfaceExample.h  ParametricMeshExamples.h  PointsOBB.h  ProjectToSurfaceExample.h  RayTracingTest.h  Reflection.h  SolidifyMeshExample.h  SphericalLinkageExample.h  SplineExample.h  TestRendering.h  WireFrameMaterialExample.h  empty.cpp
(+188 files in other folders)
